test/files/neg/t1659.check
t1659.scala:3: error: error overriding method u in trait W of type [A](Y{type X = A})Unit;
 method u has incompatible type [A](Y{type X = A})Null
class Z extends W { def u[A](v : Y { type X = A }) = null }
                        ^
one error found
